fixed overflow issue on home page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,5 +3,4 @@
     margin: 0px;
     box-sizing: border-box;
     font-family: 'Nunito', sans-serif;
-    overflow-x: hidden;
 }
